# stickynotes

./: README.md  STORAGE.md  meson.build  org.gnome.StickyNotes.json  read_ia
data/: meson.build  org.gnome.Example.desktop.in  org.gnome.StickyNotes.gschema.xml
data/icons/: meson.build
po/: meson.build
src/: meson.build  stickynotes.gresource.xml  stickynotes.in
src/stickynotes/: main.py  note.py  note.py.bak  window.py  window.py.bak  window.ui
src/stickynotes/css/: note.css  preview.css
